<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome4">

    <include
        layout="@layout/welcome_cashie"
        android:id="@+id/welcome_cashie_layout" />

    <ImageView
        android:id="@+id/frame_3"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/frame_3"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_cashie_layout"
        app:layout_constraintStart_toStartOf="@id/welcome_cashie_layout"
        app:layout_constraintEnd_toEndOf="@id/welcome_cashie_layout" />

    <TextView
        android:id="@+id/sales_histo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal|top"
        android:text="@string/sales_histo"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/frame_3"
        app:layout_constraintStart_toStartOf="@+id/frame_3"
        app:layout_constraintTop_toBottomOf="@+id/frame_3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/simplify_yo"
        android:text="@string/view_past_t"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/sales_histo"
        app:layout_constraintStart_toStartOf="@+id/sales_histo"
        app:layout_constraintTop_toBottomOf="@+id/sales_histo" />

    <!-- Dots Indicator -->


    <TextView
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/signin"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dotsIndicator"
        app:layout_constraintTop_toBottomOf="@+id/dotsIndicator" />
</androidx.constraintlayout.widget.ConstraintLayout>
