<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Views.SignInActivity">

    <!-- Welcome to -->
    <TextView
        android:id="@+id/welcome_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>

    <!-- Cashie -->
    <TextView
        android:id="@+id/cashie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="#03AED2"
        android:fontFamily="cursive"
        app:layout_constraintTop_toBottomOf="@id/welcome_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <!-- Email Text Box -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="324dp"
        android:layout_height="63dp"
        app:layout_constraintTop_toBottomOf="@id/cashie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your Email"
            android:inputType="textEmailAddress"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Text Box -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="324dp"
        android:layout_height="63dp"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your Password"
            android:inputType="textPassword"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Recovery Password -->
    <TextView
        android:id="@+id/recovery_pa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textSize="16sp"
        android:textColor="#8A000000"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <!-- Login Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="324dp"
        android:layout_height="63dp"
        android:background="@color/btncolor"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/recovery_pa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <!-- Divider Text "OR CONNECT WITH" -->
    <TextView
        android:id="@+id/divider_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR CONNECT WITH"
        android:textSize="14sp"
        android:textColor="#8A000000"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>


    <LinearLayout
        android:id="@+id/social_login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/divider_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/facebook_login_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:src="@drawable/facebook"
            android:layout_marginEnd="16dp"
            android:contentDescription="Login with Facebook"/>

        <ImageButton
            android:id="@+id/google_login_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:src="@drawable/google"
            android:contentDescription="Login with Google"/>
    </LinearLayout>

    <!-- blm ada akun -->
    <TextView
        android:id="@+id/not_have_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noakun"
        android:textSize="14sp"
        android:textColor="#CC000000"
        app:layout_constraintTop_toBottomOf="@id/social_login_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <!-- buat akun -->
    <TextView
        android:id="@+id/create_an_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regis"
        android:textSize="14sp"
        android:textColor="#03AED2"
        app:layout_constraintTop_toBottomOf="@id/not_have_ac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
